fix: bug with shift and numbers, add width to keys-modifiers

--- a/style.scss
+++ b/style.scss
@@ -28,7 +28,6 @@ $color-dark: #696969;
   user-select: none;
   font-family: 'Montserrat', 'Tahoma', sans-serif;
   font-size: 1.2rem;
-  line-height: 2.4rem;
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2) inset;
 
     @media only screen and (max-width: 1200px) {
@@ -42,26 +41,44 @@ $color-dark: #696969;
 
 
 .key-common {
-  background-color: yellow;
+  background-color: LightGrey;
   background: linear-gradient(45deg, rgb(222, 225, 227), rgb(242, 246, 249));
   transition: all 0.5s;
-
-  &[data-code="Space"] {
-    flex-grow: 1;
-  }
-
+   
   &:hover {
+    background-color: LightSlateGray;
     background: linear-gradient(45deg, rgb(224, 225, 227), rgb(200, 201, 202));
   }
 }
 
 .key-general {
-  background-color: blue;
+  background-color: Gray;
   background: linear-gradient(45deg, rgb(242, 242, 242), rgb(208, 211, 214), rgb(196, 197, 194));
 
   &:hover {
+    background-color: LightSlateGray;
     background: linear-gradient(45deg, rgb(174, 177, 180), rgb(215, 217, 219), rgb(157, 157, 153));
   }
+}
+
+.shift {
+  width: 6.47vw;
+}
+
+[data-code="Tab"] {
+  width: 6vw;
+}
+
+[data-code="CapsLock"] {
+  width: 7.5vw;
+}
+
+[data-code="Enter"] {
+  width: 5.5vw;
+}
+
+[data-code="Space"] {
+  flex-grow: 1;
 }
 
 .keyboard-container {
@@ -88,6 +105,7 @@ $color-dark: #696969;
   background-color: blueviolet;
   transform: scale(0.95);
   box-shadow: 0px 5px 5px 2px rgba(34, 60, 80, 0.2);
+  background-color: DimGrey;
   background: linear-gradient(45deg, rgb(136, 142, 148), rgb(118, 131, 142), rgb(91, 91, 92));
 }
 
